--- a/terraform/A2/A2.md
+++ b/terraform/A2/A2.md
@@ -22,4 +22,4 @@ We can fix this error by setting the alias argument in the provider configuratio
 │   21: provider "aws" {
 ```
 
-To fix the error, used the eu-north-1, instead of us-east-1.
+To fix the error, used the eu-north-1, instead of eu-east-1.
